# aioduck

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
